--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "vite": "^5.0"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -37,6 +39,8 @@
     "@types/react-syntax-highlighter": "^15.5.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "latest",
+    "jotai": "^2.8.0",
     "lucide-react": "^0.372.0",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
