--- a/package.json
+++ b/package.json
@@ -38,11 +38,15 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@types/react-syntax-highlighter": "^15.5.11",
+    "algoliasearch": "^4.23.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "latest",
+    "instantsearch.css": "^8.1.0",
+    "instantsearch.js": "^4.67.0",
     "jotai": "^2.8.0",
     "lucide-react": "^0.372.0",
+    "react-instantsearch": "^7.7.2",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-raw": "^7.0.0",
