--- a/package.json
+++ b/package.json
@@ -1,56 +1,58 @@
 {
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.7.0",
-    "@headlessui/react": "^1.4.2",
-    "@inertiajs/react": "^1.0.0",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.12",
-    "@types/node": "^18.13.0",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^4.2.0",
-    "autoprefixer": "^10.4.12",
-    "axios": "^1.6.4",
-    "laravel-vite-plugin": "^1.0",
-    "postcss": "^8.4.31",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "shadcn-ui": "^0.8.0",
-    "tailwindcss": "^3.2.1",
-    "typescript": "^5.0.2",
-    "vite": "^5.0"
-  },
-  "dependencies": {
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@types/react-syntax-highlighter": "^15.5.11",
-    "algoliasearch": "^4.23.3",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "cmdk": "latest",
-    "instantsearch.css": "^8.1.0",
-    "instantsearch.js": "^4.67.0",
-    "jotai": "^2.8.0",
-    "lucide-react": "^0.372.0",
-    "react-instantsearch": "^7.7.2",
-    "react-markdown": "^9.0.1",
-    "react-syntax-highlighter": "^15.5.0",
-    "rehype-raw": "^7.0.0",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
-  }
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.7.0",
+		"@headlessui/react": "^1.4.2",
+		"@inertiajs/react": "^1.0.0",
+		"@tailwindcss/forms": "^0.5.3",
+		"@tailwindcss/typography": "^0.5.12",
+		"@types/node": "^18.13.0",
+		"@types/react": "^18.0.28",
+		"@types/react-dom": "^18.0.10",
+		"@vitejs/plugin-react": "^4.2.0",
+		"autoprefixer": "^10.4.12",
+		"axios": "^1.6.4",
+		"laravel-vite-plugin": "^1.0",
+		"postcss": "^8.4.31",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"shadcn-ui": "^0.8.0",
+		"tailwindcss": "^3.2.1",
+		"typescript": "^5.0.2",
+		"vite": "^5.0"
+	},
+	"dependencies": {
+		"@radix-ui/react-checkbox": "^1.0.4",
+		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-dropdown-menu": "^2.0.6",
+		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-popover": "^1.0.7",
+		"@radix-ui/react-select": "^2.0.0",
+		"@radix-ui/react-separator": "^1.0.3",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-tabs": "^1.0.4",
+		"@types/react-instantsearch-dom": "^6.12.7",
+		"@types/react-syntax-highlighter": "^15.5.11",
+		"algoliasearch": "^4.23.3",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
+		"cmdk": "^1.0.0",
+		"instantsearch.css": "^8.1.0",
+		"instantsearch.js": "^4.67.0",
+		"jotai": "^2.8.0",
+		"lucide-react": "^0.372.0",
+		"react-instantsearch": "^7.7.2",
+		"react-instantsearch-dom": "^6.40.4",
+		"react-markdown": "^9.0.1",
+		"react-syntax-highlighter": "^15.5.0",
+		"rehype-raw": "^7.0.0",
+		"tailwind-merge": "^2.3.0",
+		"tailwindcss-animate": "^1.0.7"
+	}
 }
